--- a/assets/base.css
+++ b/assets/base.css
@@ -2365,53 +2365,7 @@ input[type='checkbox'] {
 
 @media screen and (min-width: 990px) {
   .header {
-    grid-template-columns: 1fr auto 1fr;
-  }
-
-  .header--top-left,
-  .header--middle-left:not(.header--has-menu) {
-    grid-template-areas:
-      'heading icons'
-      'navigation navigation';
-    grid-template-columns: 1fr auto;
-  }
-
-  .header--top-left.drawer-menu,
-  .header--middle-left.drawer-menu {
-    grid-template-areas: 'navigation heading icons';
     grid-template-columns: auto 1fr auto;
-    column-gap: 1rem;
-  }
-
-  .header--middle-left {
-    grid-template-areas: 'heading navigation icons';
-    grid-template-columns: auto auto 1fr;
-    column-gap: 2rem;
-  }
-
-  .header--middle-center:not(.drawer-menu) {
-    grid-template-areas: 'navigation heading icons';
-    grid-template-columns: 1fr auto 1fr;
-    column-gap: 2rem;
-  }
-
-  .header--middle-center a.header__heading-link {
-    text-align: center;
-  }
-
-  .header--top-center {
-    grid-template-areas:
-      'left-icons heading icons'
-      'navigation navigation navigation';
-  }
-
-  .header--top-center.drawer-menu {
-    grid-template-areas: 'left-icons heading icons';
-    grid-template-columns: 1fr auto 1fr;
-  }
-
-  .header:not(.header--middle-left, .header--middle-center) .header__inline-menu {
-    margin-top: 1.05rem;
   }
 }
 
@@ -2434,12 +2388,51 @@ input[type='checkbox'] {
   justify-self: center;
 }
 
+.header {
+  position: relative;
+  display: grid;
+  grid-template-areas: 'navigation heading icons';
+  grid-template-columns: auto 1fr auto;
+  align-items: center;
+  column-gap: 1.6rem;
+}
+
+.header__heading {
+  grid-area: heading;
+  justify-self: center;
+  text-align: center;
+  margin: 0;
+}
+
 .header__heading-link {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   padding: 0.75rem;
   text-decoration: none;
   word-break: break-word;
 }
+
+.header__icons {
+  display: inline-flex;
+  align-items: center;
+  gap: 1rem;
+  padding-right: 0.8rem;
+  grid-area: icons;
+  justify-self: end;
+}
+
+.header__inline-menu {
+  grid-area: navigation;
+}
+
+.header__inline-menu,
+.header__search,
+header-drawer {
+  display: inline-flex;
+  align-items: center;
+}
+
 
 .header__heading-link:hover .h2 {
   color: rgb(var(--color-foreground));
@@ -2476,38 +2469,76 @@ input[type='checkbox'] {
   .header--mobile-left {
     grid-template-columns: auto 2fr 1fr;
   }
+
+  .header__inline-menu {
+    display: none !important;
+  }
+
+  .menu-drawer {
+    width: 80vw;
+    max-width: 80vw;
+  }
 }
 
 @media screen and (min-width: 990px) {
   .header--middle-left .header__heading-link,
   .header--top-left .header__heading-link {
-    margin-left: -0.75rem;
+    margin-left: 0;
   }
 
   .header__heading,
   .header__heading-link {
-    justify-self: start;
-  }
-
-  .header--middle-center .header__heading-link,
-  .header--middle-center .header__heading {
     justify-self: center;
     text-align: center;
   }
 
+  .header--middle-center .header__heading-link,
+  .header--middle-center .header__heading,
   .header--top-center .header__heading-link,
   .header--top-center .header__heading {
     justify-self: center;
     text-align: center;
   }
+
+  .header--middle-left,
+  .header--top-left,
+  .header--middle-left.drawer-menu,
+  .header--top-left.drawer-menu {
+    grid-template-areas: 'navigation heading icons';
+    grid-template-columns: auto 1fr auto;
+    column-gap: 1.6rem;
+  }
+}
+
+.template-product .header,
+.template-collection .header {
+  display: grid;
+  grid-template-areas: 'navigation heading icons';
+  grid-template-columns: auto 1fr auto;
+  align-items: center;
+}
+
+.template-product .header__heading,
+.template-product .header__heading-link,
+.template-collection .header__heading,
+.template-collection .header__heading-link {
+  justify-self: center;
+  text-align: center;
 }
 
 /* Header icons */
 .header__icons {
-  display: flex;
-  grid-area: icons;
-  justify-self: end;
+  display: inline-flex;
+  align-items: center;
+  gap: 1rem;
   padding-right: 0.8rem;
+}
+
+.header__inline-menu,
+.header__search,
+header-drawer {
+  display: inline-flex;
+  align-items: center;
 }
 
 .header__icons .shopify-app-block {
