--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -350,7 +350,7 @@
 }
 
 .banner--mobile-bottom .banner__box {
-  padding: 4rem 3.5rem;
+  padding: 4rem 8rem;
 }
 
 @media screen and (min-width: 750px) {
@@ -388,7 +388,7 @@
   content: '';
   position: absolute;
   top: 0;
-  background: #000000;
+  /* background: #000000; */
   opacity: 0;
   z-index: 1;
   width: 100%;
